cmake_minimum_required(VERSION 3.14)
project(Final)

set(CMAKE_CXX_STANDARD 11)

file(GLOB_RECURSE SOURCE_FILES "src/*.cpp")

add_executable(Final ${SOURCE_FILES})

include_directories(/usr/local/include include)

find_package(SFML 2.6 COMPONENTS system window graphics network audio REQUIRED)
include_directories(${SFML_INCLUDE_DIRS})
target_link_libraries(Final sfml-system sfml-window sfml-graphics sfml-audio sfml-network)